# iofw

./: CMakeLists.txt  README.md
inc/: iofw_registry.h  iofw_slots.h  iofw_types.h
src/: iofw_close.c  iofw_fstat.c  iofw_isatty.c  iofw_open.c  iofw_read.c  iofw_registry.c  iofw_slots.c  iofw_write.c
